--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@/prisma/*": ["./prisma/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
